--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,22 @@
+# Backend Environment Variables Template
+# Copy these to Render dashboard when deploying
 
-DB_HOST=localhost
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
-DB_NAME=your_database_name
+# Database Configuration (Get from your Aiven MySQL dashboard)
+DB_HOST=your-mysql-host.aivencloud.com
+DB_USER=avnadmin
+DB_PORT=12345
+DB_PASSWORD=your-secure-password
+DB_NAME=defaultdb
 
+# SSL Certificate Path (keep as is - file is in repo)
+DB_SSL_CA=./aiven-ca.crt
 
+# Frontend URL (add after deploying frontend to Vercel)
+# Format: https://your-app.vercel.app (no trailing slash)
+FRONTEND_URL=https://your-frontend-app.vercel.app
+
+# Server Port (Render will use this)
 PORT=5000
+
+# Node Environment
+NODE_ENV=production
