--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables
-# Replace this with your actual Render backend URL after deployment
-VITE_API_URL=https://your-backend-app.onrender.com
+# Render backend URL
+VITE_API_URL=https://sql-dashboard-backend.onrender.com
